доработана работа с оболочкой linux в части копирования